<resources>
    <string name="app_name">BLE</string>
    <string name="app_text_serial_net">SerialNet</string>
    <string name="app_text_devices">Devices</string>
    <string name="app_text_tip_refresh">Pull down to refresh Bluetooth…</string>
    <string name="app_text_inquiry">Inquiry</string>
    <string name="app_text_set_up">Set Up</string>
    <string name="app_text_connection_method">Connection Method</string>
    <string name="app_text_tip_connecting">Connecting, please wait…</string>
    <string name="app_text_read_write_tag">Read_Write Tag</string>
    <string name="app_text_read_tag">Read Tag</string>
    <string name="app_text_write_tag">Write Tag</string>
    <string name="app_text_lock_tag">Lock Tag</string>
    <string name="app_text_kill_tag">Kill Tag</string>
    <string name="app_text_inquiry_config">Inquiry Config</string>
    <string name="app_text_interval_time">Interval Time(*10ms):</string>
    <string name="app_text_start_address">Start Address(Byte):</string>
    <string name="app_text_byte_length">byte Length(Byte):</string>
    <string name="app_text_filter_time">Filter Time(s):</string>
    <string name="app_text_get">Get</string>
    <string name="app_text_get_success">Get Successfully</string>
    <string name="app_text_no">No</string>
    <string name="app_text_num">Num</string>
    <string name="app_text_antenna">Antenna</string>
    <string name="app_text_channel">Channel</string>
    <string name="app_text_start">START</string>
    <string name="app_text_end">END</string>
    <string name="app_text_connect">Connect</string>
    <string name="app_text_data">Data</string>
    <string name="app_text_data_len">Data Len</string>
    <string name="app_text_kill_password_hex">Kill Password(HEX)</string>
    <string name="app_text_kill">Kill</string>
    <string name="app_text_access_password">Access Password</string>
    <string name="app_text_kill_password">Kill Password</string>
    <string name="app_text_openness">Openness</string>
    <string name="app_text_lock">Lock</string>
    <string name="app_text_permanent_openness">Permanent Openness</string>
    <string name="app_text_permanent_lock">Permanent Lock</string>
    <string name="app_text_access_password_hex">Access Password(HEX):</string>
    <string name="app_text_start_address_word">Start Address(WORD):</string>
    <string name="app_text_data_length_word">Data Length(WORD):</string>
    <string name="app_text_password_hex">Password(HEX):</string>
    <string name="app_text_user_input_area">User Input Area</string>
    <string name="app_text_read">Read</string>
    <string name="app_text_write">Write</string>
    <string name="app_text_elect_power">Electricity:</string>
    <string name="app_text_elect_acquisition">Electricity acquisition in progress…</string>
    <string name="app_text_hardware_version">Hardware Version:</string>
    <string name="app_text_hardware_version_get">Hardware Version acquisition in progress…</string>
    <string name="app_text_firmware_version">Firmware Version:</string>
    <string name="app_text_firmware_version_get">Firmware Version acquisition in progress…</string>
    <string name="app_text_reader_name">Reader Name:</string>
    <string name="app_text_reader_name_get">Reader Name acquisition in progress…</string>
    <string name="app_text_output_mode">Output Mode:</string>
    <string name="app_text_frequency_band">Frequency:</string>
    <string name="app_text_power">Power:</string>
    <string name="app_text_disconnect_bluetooth">Disconnect Bluetooth</string>
    <string name="app_text_cannot_exceed">Cannot exceed</string>
    <string name="app_text_setting_failed">Setting failed</string>
    <string name="app_text_setting_success">Setting success</string>
    <string name="app_text_query_interval_time_range">Query interval time range</string>
    <string name="app_text_tip_cannot_empty">The setting content cannot be empty</string>
    <string name="app_text_set_bluetooth_name_success">Successfully set Bluetooth name</string>
    <string name="app_text_set_bluetooth_name_failed">Failed to set Bluetooth name</string>
    <string name="app_text_bluetooth_disconnect">Bluetooth disconnected</string>
    <string name="app_text_tip_obtain_device_failed">Failed to obtain device information</string>
    <string name="app_text_tip_obtain_power_success">Successfully obtained power</string>
    <string name="app_text_tip_obtained_band_success">Successfully obtained frequency band</string>
    <string name="app_text_tip_please_end_query">Inquiry…Please end the query first for selection</string>
    <string name="app_text_tip_connect_success">Successfully connected</string>
    <string name="app_text_stay_tuned">Stay tuned</string>
    <string name="app_text_tip_connect_failed">connect failed</string>
    <string name="app_text_tip_enter_password">Please enter the password</string>
    <string name="app_text_tip_enter_start_address">Please enter the starting address</string>
    <string name="app_text_tip_enter_data_length">Please enter the data length</string>
    <string name="app_text_tip_enter_write_label">Please enter the data to write to the label</string>
    <string name="app_text_tip_select_locked_area">Please select a locked area</string>
    <string name="app_text_tip_select_lock_operation">Please select the type of lock operation</string>
    <string name="app_text_tip_enter_the_kill_password">Please enter the kill password</string>
    <string name="app_text_tip_operation_failed">operation failed</string>
    <string name="app_text_Initialization">Reboot</string>
    <string name="app_text_init_success">Reboot Successfully</string>
    <string name="app_text_init_failed">Reboot failed</string>
    <string name="app_text_set_bluetooth_mode_success">Successfully set Bluetooth mode</string>
    <string name="app_text_set_bluetooth_mode_failed">Failed to set Bluetooth mode</string>
    <string name="app_text_total_tag">Total Tag</string>
    <string name="app_text_sum_count">Sum Count</string>


    <string-array name= "blemode" >
        <item>SerialNet</item>
        <item>HID</item>
    </string-array>
</resources>