<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="5dp"
    android:background="@color/royalblue">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/linearLayoutCompat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <CheckBox
            android:id="@+id/cbHeader"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:visibility="invisible"
            android:layout_gravity="center_vertical"/>

        <TextView
            android:id="@+id/tvTime"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:layout_marginVertical="5dp"
            android:gravity="center"
            android:layout_gravity="center_vertical"
            android:textColor="@color/white"
            android:text="@string/app_text_no" />

        <TextView
            android:id="@+id/tvData"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:layout_marginVertical="5dp"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_gravity="center_vertical"
            android:maxLines="1"
            android:textColor="@color/white"
            android:text="@string/app_text_data" />

        <TextView
            android:id="@+id/tvData1"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:layout_marginVertical="5dp"
            android:gravity="center"
            android:layout_gravity="center_vertical"
            android:textColor="@color/white"
            android:text="@string/app_text_num" />

        <TextView
            android:id="@+id/tvData2"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:layout_marginVertical="5dp"
            android:gravity="center"
            android:layout_gravity="center_vertical"
            android:textColor="@color/white"
            android:text="RSSI" />

        <TextView
            android:id="@+id/tvData3"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:layout_marginVertical="5dp"
            android:gravity="center"
            android:layout_gravity="center_vertical"
            android:textColor="@color/white"
            android:visibility="gone"
            android:text="@string/app_text_antenna" />

        <TextView
            android:id="@+id/tvData4"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:layout_marginVertical="5dp"
            android:gravity="center"
            android:visibility="gone"
            android:layout_gravity="center_vertical"
            android:textColor="@color/white"
            android:text="@string/app_text_channel" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="2dp"
        android:background="@color/gray_8f"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayoutCompat" />

</androidx.constraintlayout.widget.ConstraintLayout>