<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="2dp">

    <androidx.cardview.widget.CardView
        android:id="@+id/cdMsgData"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="2dp"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="2dp"
        android:foreground="?android:attr/selectableItemBackground"
        android:background="@color/white"
        app:cardCornerRadius="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="RtlHardcoded">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/linearLayoutCompat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <CheckBox
                android:id="@+id/cbSelect"
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:clickable="false"/>

            <TextView
                android:id="@+id/tvTime"
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginVertical="5dp"
                android:gravity="center"
                android:textColor="@color/royalblue"
                tools:text="@string/app_text_no" />

            <TextView
                android:id="@+id/tvData"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginHorizontal="5dp"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="@color/royalblue"
                tools:text="55 55 66 77 88 99 AA BB CC DD" />

            <TextView
                android:id="@+id/tvData1"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginHorizontal="5dp"
                android:layout_marginVertical="5dp"
                android:gravity="center"
                android:textColor="@color/royalblue"
                tools:text="@string/app_text_num" />

            <TextView
                android:id="@+id/tvData2"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="6dp"
                android:layout_marginVertical="5dp"
                android:gravity="center"
                android:textColor="@color/royalblue"
                tools:text="RSSI" />

            <TextView
                android:id="@+id/tvData3"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginHorizontal="5dp"
                android:layout_marginVertical="5dp"
                android:gravity="center"
                android:textColor="@color/royalblue"
                android:visibility="gone"
                tools:text="@string/app_text_antenna" />

            <TextView
                android:id="@+id/tvData4"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginHorizontal="5dp"
                android:layout_marginVertical="5dp"
                android:gravity="center"
                android:visibility="gone"
                android:textColor="@color/royalblue"
                tools:text="@string/app_text_channel" />

        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>