<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="2dp">

    <androidx.cardview.widget.CardView
        android:id="@+id/cdMsgData"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="2dp"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="2dp"
        android:foreground="?android:attr/selectableItemBackground"
        android:background="@color/white"
        app:cardCornerRadius="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="RtlHardcoded">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/linearLayoutCompat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tvPc"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="5dp"
                android:layout_marginVertical="5dp"
                android:gravity="center"
                android:layout_gravity="center_vertical"
                android:textColor="@color/royalblue"
                tools:text="PC" />

            <TextView
                android:id="@+id/tvCrc"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="5dp"
                android:layout_marginVertical="5dp"
                android:gravity="center"
                android:layout_gravity="center_vertical"
                android:textColor="@color/royalblue"
                tools:text="CRC" />

            <TextView
                android:id="@+id/tvEpc"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="5dp"
                android:layout_marginVertical="5dp"
                android:gravity="center"
                android:layout_gravity="center_vertical"
                android:maxLines="1"
                android:textColor="@color/royalblue"
                tools:text="EPC" />

            <TextView
                android:id="@+id/tvLen"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="5dp"
                android:layout_marginVertical="5dp"
                android:gravity="center"
                android:layout_gravity="center_vertical"
                android:textColor="@color/royalblue"
                tools:text="@string/app_text_data_len" />

            <TextView
                android:id="@+id/tvData"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="5dp"
                android:layout_marginVertical="5dp"
                android:gravity="center"
                android:layout_gravity="center_vertical"
                android:textColor="@color/royalblue"
                tools:text="@string/app_text_data" />

            <TextView
                android:id="@+id/tvAnt"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="5dp"
                android:layout_marginVertical="5dp"
                android:gravity="center"
                android:layout_gravity="center_vertical"
                android:textColor="@color/royalblue"
                android:visibility="gone"
                tools:text="@string/app_text_antenna" />

            <TextView
                android:id="@+id/tvNum"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="5dp"
                android:layout_marginVertical="5dp"
                android:gravity="center"
                android:layout_gravity="center_vertical"
                android:textColor="@color/royalblue"
                tools:text="@string/app_text_num" />

        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>